--- a/shops.yml
+++ b/shops.yml
@@ -3471,5 +3471,6 @@ Flowers:
 ################################
 ##  Developed by pablo67340   ##
 ##  If you need any support:  ##
-##  discord.gg/XQb2Y2jBCa     ##
+##  discord.gg/XQb2Y2jBCa  ##
+##  Boredom is gay##
 ################################
